--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,7 +12,7 @@ on:
   #  branches: 
   #    - master
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 1 * * *"
   watch:
     types: [started]
 
@@ -30,10 +30,13 @@ jobs:
       with:
         python-version: 3.8
     - name: Install dependencies
+      env:
+        TZ: Asia/Shanghai  # 设置时区
       run: |
         python -m pip install --upgrade pip
         pip install requests
         pip install argparse
+        pip install time
     - name: Check in NUAA
       run: |
         python checkin.py -u ${{secrets.USERNAME}} -p ${{secrets.PASSWORD}}
